--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:multidex:1.0.3'
 
+    //Firebase
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 
     //Navigation architecture component
     implementation "android.arch.navigation:navigation-fragment:$nav_version"
     implementation "android.arch.navigation:navigation-ui:$nav_version"
 }
+
+apply plugin: 'com.google.gms.google-services'
