--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,10 @@ dependencies {
 
     //Range SeekBar
     implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
