--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each{
+        it.buildConfigField 'String', 'LEGACY_SERVER_KEY', LEGACY_SERVER_KEY
+    }
     packagingOptions {
         exclude 'META-INF/compiler.kotlin_module'
     }
@@ -51,7 +54,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
 
+    //Firestore
     implementation 'com.google.firebase:firebase-firestore:17.1.5'
+
+    //Firebase cloud messaging
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
+    //OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
     //Navigation architecture component
     implementation "android.arch.navigation:navigation-fragment:$nav_version"
